# iatevale

./: .bazelignore  .bazelproject  .bazelrc  .gitignore  CLAUDE.md  MODULE.bazel  README.md  rules_jvm_external++maven+maven_install.json
java/a2a/server/base/grpc/: BUILD.bazel
java/a2a/server/base/service/skill/: BUILD.bazel
java/a2a/server/vanilla/service/skill/: BUILD.bazel
java/bootstrap/base/gson/: BUILD.bazel
java/bootstrap/base/gson/src/main/java/io/github/jtpadilla/gson/: GsonUtil.java  JsonInstantAdapter.java  JsonLocalDateTimeAdapter.java  JsonZonedDateTimeAdapter.java  package-info.java
java/bootstrap/base/gson/src/test/java/io/github/jtpadilla/gson/test/: JsonLocalDateTimeAdapterTest.java  JsonLocalDateTimeGsonTest.java
java/bootstrap/base/protobuf/: BUILD.bazel
java/bootstrap/base/protobuf/src/main/java/io/github/jtpadilla/protobuf/: ProtoJsonUtil.java  ProtoStructUtil.java  ProtoThrowableUtil.java  TimestampUtil.java
java/bootstrap/base/util/: BUILD.bazel
java/bootstrap/base/util/src/main/java/io/github/jtpadilla/util/: ASCIIArtGenerator.java  BytesUtils.java  DelayedBiConsumer.java  DelayedReseteableExecutor.java  IteratorUtils.java  TemporalContainer.java  ValidationUtils.java
java/bootstrap/base/util/src/test/java/io/github/jtpadilla/util/test/: ByteUtilsTest.java
java/bootstrap/gcloud/context/: BUILD.bazel
java/bootstrap/gcloud/context/src/main/java/io/github/jtpadilla/gcloud/context/: DefaultGCloudContextService.java  IGCloudContextService.java  UnitResource.java  package-info.java
java/bootstrap/gcloud/genai/: BUILD.bazel
java/bootstrap/gcloud/genai/src/main/java/io/github/jtpadilla/gcloud/genai/: GenAIWrapperException.java  IGenAIService.java  package-info.java
java/bootstrap/unit/: BUILD.bazel
java/bootstrap/unit/src/main/java/io/github/jtpadilla/unit/: Unit.java  UnitEnviromentConfig.java  package-info.java
java/bootstrap/unit/src/main/java/io/github/jtpadilla/unit/logger/: IUnitLogger.java  UnitLoggerData.java  UnitLoggerLevel.java  UnitLoggerService.java  package-info.java
java/bootstrap/unit/src/main/java/io/github/jtpadilla/unit/logger/config/: UnitLoggerCustomLevelConfig.java  UnitLoggerRootLevelConfig.java  package-info.java
java/bootstrap/unit/src/main/java/io/github/jtpadilla/unit/logger/impl/: DB.java  Entry.java  RootEntry.java  UnitLogger.java  package-info.java
java/bootstrap/unit/src/main/java/io/github/jtpadilla/unit/logger/labels/: UnitDetail.java  UnitFeature.java  UnitLoggerContext.java  UnitOperation.java  UnitTrace.java
java/bootstrap/unit/src/main/java/io/github/jtpadilla/unit/parameter/: IParameterDescriptor.java  IParameterDriver.java  IParameterReader.java  IParameterReaderBuilder.java  IParameterValue.java  UnitResource.java  package-info.java
java/bootstrap/unit/src/test/java/io/github/jtpadilla/unit/test/: UnitAllTests.java
java/bootstrap/unit/src/test/resources/: parameters.txt
java/genai/: BUILD.bazel
java/genai/src/main/java/io/github/jtpadilla/genai/: GenAIService.java  GenAIServiceDefault.java  GenAIWrapperException.java  IGenAIService.java  package-info.java
java/genai/src/main/java/io/github/jtpadilla/genai/agent/: AgentException.java  AgentResources.java  package-info.java
java/genai/src/main/java/io/github/jtpadilla/genai/function/: FunctionGateway.java  FunctionGatewayCall.java  FunctionGatewayException.java  package-info.java
java/genai/src/main/java/io/github/jtpadilla/genai/function/part/: PartFunctionCallWrapper.java  PartOtherWrapper.java  PartTextWrapper.java  PartWrapper.java  package-info.java
java/genai/src/main/java/io/github/jtpadilla/genai/generate/: GenerateContentException.java  GenerateContentWrapper.java  PromptBuilder.java  package-info.java
java/genai/src/main/java/io/github/jtpadilla/genai/impl/: GenAIServiceDefault.java  GenAIServiceGemma3ApiKey.java
java/genai/src/main/java/io/github/jtpadilla/genai/schema/: SchemaEnabled.java  SchemaException.java  SchemaGson.java  package-info.java
java/genai/src/main/java/io/github/jtpadilla/genai/util/: FethPartException.java  FethPartUtil.java  package-info.java
java/langchain4j/: BUILD.bazel
java/langchain4j/src/main/java/io/github/jtpadilla/langchain4j/: Lc4jException.java  Lc4jService.java  Lc4jServiceDefault.java  package-info.java
java/langchain4j/src/main/java/io/github/jtpadilla/langchain4j/agent/: AgentException.java  AgentResources.java  package-info.java
java/langchain4j/src/main/java/io/github/jtpadilla/langchain4j/function/: FunctionGateway.java  FunctionGatewayCall.java  FunctionGatewayException.java  package-info.java
java/langchain4j/src/main/java/io/github/jtpadilla/langchain4j/function/part/: PartOtherWrapper.java  PartTextWrapper.java  PartToolCallWrapper.java  PartWrapper.java  package-info.java
java/langchain4j/src/main/java/io/github/jtpadilla/langchain4j/generate/: GenerateException.java  PromptBuilder.java  ResponseWrapper.java  package-info.java
java/langchain4j/src/main/java/io/github/jtpadilla/langchain4j/schema/: SchemaEnabled.java  SchemaException.java  SchemaGson.java  package-info.java
java/langchain4j/src/main/java/io/github/jtpadilla/langchain4j/util/: FetchPartException.java  FetchPartUtil.java  package-info.java
java/product/genaiexample/: BUILD.bazel
java/product/genaiexample/src/main/java/io/github/jtpadilla/product/genaiexample/: GenaiExample.java
java/product/genaiexample/src/main/resources/: application.yaml
java/product/langchain4jexample/: BUILD.bazel
java/product/langchain4jexample/src/main/java/io/github/jtpadilla/product/langchain4jexample/: Langchain4jExample.java
java/product/langchain4jexample/src/main/resources/: application.yaml
java/product/simpleagent/: BUILD.bazel
java/product/simpleagent/src/main/java/io/github/jtpadilla/product/simpleagent/: Main.java  SimpleAgent.java
java/product/simpleagent/src/resources/: LEEME.txt  sandbox-inline.md  sandbox-url.md
java/skill/echo/: BUILD.bazel
proto/google/api/: BUILD.bazel  client.proto
proto/lf/a2a/v1/: BUILD.bazel  a2a.proto
(+331 files in other folders)
