module(
    name = "iatevale",
    version = "0.1.0",
)

# Dependencias BAZEL
bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "rules_jvm_external", version = "6.10")
bazel_dep(name = "grpc-java", version = "1.78.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "protobuf", version = "33.4")

# Dependencias MAVEL
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        ## Guice
        "com.google.inject:guice:6.0.0",

        ## Google BOM https://github.com/googleapis/java-cloud-bom
        # Guava
        "com.google.guava:guava",
        # Http Client
        "com.google.http-client:google-http-client",
        "com.google.http-client:google-http-client-jackson2",
        # GCloud bajo nivel (directamente desde los protos de googleapis)
        "com.google.api.grpc:proto-google-cloud-pubsub-v1",
        "com.google.api.grpc:grpc-google-cloud-pubsub-v1",
        "com.google.api.grpc:proto-google-cloud-logging-v2",
        "com.google.api.grpc:grpc-google-cloud-logging-v2",
        "com.google.api.grpc:grpc-google-cloud-datastore-v1:2.33.1",  # Estudiar: https://github.com/googleapis/java-datastore/tree/main
        "com.google.api.grpc:proto-google-cloud-datastore-v1",
        # GCloud alto nivel
        "com.google.cloud:google-cloud-datastore",
        "com.google.cloud:google-cloud-pubsub",
        "com.google.cloud:google-cloud-storage",
        "com.google.cloud:google-cloud-vertexai",

        ## Advertencias de Null
        "org.jspecify:jspecify:1.0.0",

        ## Librerias JSON de jackson antiguas (en produccion)
        "com.fasterxml.jackson.core:jackson-annotations",
        "com.fasterxml.jackson.core:jackson-core",
        "com.fasterxml.jackson.core:jackson-databind",
        "com.fasterxml.jackson.datatype:jackson-datatype-jsr310",

        ## Librerias JSON de jackson nuevas
        "tools.jackson.core:jackson-core",
        "tools.jackson.core:jackson-databind",

        ## Librerias para interactuar con Gemini
        "com.google.genai:google-genai:1.46.0",

        ## Tests complejos
        "org.awaitility:awaitility:4.1.1",
        "org.mockito:mockito-core:jar:5.20.0",

        ## Telegram
        "org.telegram:telegrambots-client:9.4.0",
        "org.telegram:telegrambots-longpolling:9.4.0",

        ## Se utiliza en los ejemplos de vertex
        "org.json:json:20210307",

        ## a2a
        "com.google.code.gson:gson:2.13.2",
        "org.slf4j:slf4j-api:2.0.7",
        "org.slf4j:slf4j-jdk14:2.0.7",

        ## UI Web con java para prototipar
        "io.javelit:javelit:0.86.0",
        "tech.tablesaw:tablesaw-core:0.44.4",

        ## Xodus
        "org.jetbrains.xodus:xodus-openAPI:2.0.1",
        "org.jetbrains.xodus:xodus-environment:2.0.1",
        "org.jetbrains.xodus:xodus-entity-store:2.0.1",
        "org.jetbrains.xodus:xodus-vfs:2.0.1",

        ## gRPC
        "io.grpc:grpc-api",
        "io.grpc:grpc-stub",
        "io.grpc:grpc-protobuf",
        "io.grpc:grpc-netty-shaded",

        ## Helidon 4 (Service Registry)
        # config
        "io.helidon.config:helidon-config",
        "io.helidon.config:helidon-config-yaml",
        # common
        "io.helidon.common:helidon-common",
        "io.helidon.common:helidon-common-types",
        # codegen
        "io.helidon.codegen:helidon-codegen-apt",
        # service
        "io.helidon.service:helidon-service-registry",
        "io.helidon.service:helidon-service-codegen",
        # builder
        "io.helidon.builder:helidon-builder-api",
        "io.helidon.builder:helidon-builder-codegen",

        ## Helidon
        "io.helidon.webserver:helidon-webserver",
        "io.helidon.webserver:helidon-webserver-grpc",
        "io.helidon.webclient:helidon-webclient",
        "io.helidon.webclient:helidon-webclient-grpc",
        "io.helidon.logging:helidon-logging-jul",
        "io.helidon.logging:helidon-logging-common",
    ],
    boms = [
        "com.google.cloud:libraries-bom:26.74.0",
        "com.google.cloud:google-cloud-datastore-bom:2.33.2",
        "com.fasterxml.jackson:jackson-bom:2.21.0",
        "tools.jackson:jackson-bom:3.1.0",
        "jakarta.platform:jakarta.jakartaee-bom:10.0.0",
        "io.helidon:helidon-bom:4.4.0",
    ],
    version_conflict_policy = "default",
)
use_repo(maven, "maven")

# =========================================
# OCI dependencies
# =========================================
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "java_21_base",
    image = "index.docker.io/library/eclipse-temurin",
    platforms = [
        "linux/amd64",
        #         "linux/arm64/v8",
    ],
    tag = "21-jdk",
)
use_repo(oci, "java_21_base", "java_21_base_linux_amd64")
