load("@rules_java//java:defs.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "genai",
    srcs = glob(["src/main/java/**/*.java"]),
    exports = [
        "@maven//:com_google_auth_google_auth_library_oauth2_http",
        "@maven//:com_google_genai_google_genai",
    ],
    deps = [
        "//java/util/gson",
        "@maven//:com_google_auth_google_auth_library_oauth2_http",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_genai_google_genai",
        "@maven//:com_google_inject_guice",
        "@maven//:io_helidon_config_helidon_config",
        "@maven//:org_jspecify_jspecify",
    ],
)
