load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "langchain4jexample",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "io.github.jtpadilla.product.langchain4jexample.Langchain4jExample",
    resources = glob(["src/main/resources/**"]),
    visibility = ["//visibility:public"],
    deps = [
        "//java/langchain4j",
        "@maven//:com_google_code_gson_gson",
        "@maven//:io_helidon_config_helidon_config_yaml",
        "@maven//:dev_langchain4j_langchain4j_core",
        "@maven//:dev_langchain4j_langchain4j_google_ai_gemini",
        "@maven//:org_jspecify_jspecify",
    ],
)
