load("@rules_java//java:defs.bzl", "java_binary")

package(default_visibility = ["//visibility:public"])

java_binary(
    name = "simpleagent",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "io.github.jtpadilla.product.simpleagent.Main",
    deps = [
        "//java/a2a/server/base/grpc",
        "//java/a2a/server/base/http",
        "//java/a2a/server/base/service/agentcard",
        "//java/a2a/server/base/service/skill",
        "//java/a2a/server/vanilla/service/skill",
        "//java/third_party/helidon:service",
        "//proto/lf/a2a/v1:a2a_java_grpc",
        "//proto/lf/a2a/v1:a2a_java_proto",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_stub",
        "@maven//:io_helidon_http_helidon_http",
        "@maven//:io_helidon_webserver_helidon_webserver",
        "@maven//:io_helidon_webserver_helidon_webserver_grpc",
    ],
)
