load("@rules_java//java:defs.bzl", "java_binary")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "echo",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = [
        "//java/a2a/server/base/service/skill",
        "//java/third_party/helidon:service",
        "//proto/lf/a2a/v1:a2a_java_grpc",
        "//proto/lf/a2a/v1:a2a_java_proto",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_stub",
        "@protobuf//:protobuf_java_util",
    ],
)
